<resources>
    <string name="app_name">WIFI酷连</string>
    <string name="app_name_en">WIFI KuLian</string>
    <string name="notification_server_error">服务器暂时无法访问，请稍候重试。</string>
    <string name="notification_client_error">客户端访问错误，请检查设置。</string>
    <string name="register">注册</string>
    <string name="register_ok">注册成功</string>
    <string name="registering">注册中，请稍候</string>
    <string name="register_label">提交</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_email">邮箱</string>
    <string name="error_username_empty">手机号不能为空</string>
    <string name="error_username_length_invalid">用户名必须为手机号码</string>
    <string name="error_email_empty">邮箱不能为空</string>
    <string name="error_email_format_invalid">邮箱格式不正确</string>
    <string name="error_email_length_invalid">邮箱必须大于6个字符，小于40个字符</string>
    <string name="error_verifycode_empty">请填写验证码</string>
    <string name="error_verifycode_length_invalid">验证码为4位数字</string>
    <string name="error_invitecode_length_invalid">邀请码为6位数字</string>
    <string name="error_password_not_same">密码不匹配</string>
    <string name="error_username_invalid">用户名不合法，请重新输入</string>
    <string name="error_username_exist">用户名已经被注册，请尝试其他的用户名。</string>
    <string name="error_email_invalid">您输入的邮箱格式不正确。</string>
    <string name="error_email_exist">邮箱已经被注册，请尝试其他的邮箱。</string>
    <string name="error_password_invalid">密码不合法。</string>
    <string name="error_other">注册失败，未知原因。</string>
    <string name="register_tip">还没有机锋账号？\n立即创建</string>
    <string name="register_title">验证手机号码</string>
    <string name="login_success">验证成功</string>
    <string name="singin">验证中，请稍候</string>
    <string name="error_login_username">用户名不存在，请重新输入。</string>
    <string name="error_login_password">密码不正确，请重新输入。</string>
    <string name="error_login_other">登录失败，请稍候重试。</string>
    <string name="connection_title">连接</string>
    <string name="connection_recommend_app">推荐应用</string>
    <string name="connection_recommend_app_name_hint">百度糯米</string>
    <string name="connection_recommend_app_coin_hint">+550</string>
    <string name="connection_recommend_all_app">全部</string>
    <string name="connection_recommend_task">推荐任务</string>
    <string name="connection_recommend_humor">搞笑幽默</string>
    <string name="connection_recommend_all_task">全部</string>
    <string name="connection_recommend_task_name">关注wifi酷连</string>
    <string name="connection_recommend_task_coin">+800</string>
    <string name="connection_recommend_task_describtion">wifi酷连微信工作号将竭诚为您服务</string>
    <string name="connection_recommend_humor_describtion">轻松笑话、搞笑视频、愉快的生活和小段子</string>
    <string name="connection_recommend_task_view">查看</string>
    <string name="connection_link_status_value">连接成功</string>
    <string name="connection_current_link_wifi_name_hint">当前连接:</string>
    <string name="connection_current_link_wifi_name_value">小鸿WiFi</string>
    <string name="connection_current_activity_info"></string>
    <string name="connection_refresh_button_hint">刷新</string>
    <string name="connection_nearby_dialog_title_hint">已为您找到附近可用的小鸿WIFI</string>
    <string name="connection_nearby_dialog_content_hint">消耗700金币，畅享今日免费上网时间，确定要兑换吗？</string>
    <string name="connection_nearby_dialog_positive_hint">兑换</string>
    <string name="connection_nearby_dialog_negative_hint">不兑换</string>
    <string name="humor_title">幽默搞笑</string>
    <string name="warning_no_download">没有选择任何一款应用</string>
    <string name="main_tab_wifi">连接</string>
    <string name="main_tab_earn">赚金币</string>
    <string name="main_tab_humor">搞笑</string>
    <string name="main_tab_mine">个人中心</string>
    <string name="rank_top_title">赚金币</string>
    <string name="rank_tab_rcmd">推荐</string>
    <string name="rank_tab_game">游戏</string>
    <string name="rank_tab_app">应用</string>
    <string name="rank_tab_book">电子书</string>
    <string name="rank_tab_fast">风向标</string>
    <string name="rank_tab_task">推荐</string>
    <string name="download_unknown_title">"&lt;未命名&gt;"</string>
    <string name="notification_filename_separator">", "</string>
    <string name="notification_filename_extras">" 还有%1$d项"</string>
    <string name="notification_paused_by_app">被暂停</string>
    <string name="notification_download_complete">"下载完成"</string>
    <string name="sort_top_title">应用分类</string>
    <string name="sort_tab_pop">最热</string>
    <string name="sort_tab_new">最新</string>
    <string name="category_title_genius">精选专题</string>
    <string name="sort_install_nessary_title">装机必备</string>
    <string name="sort_install_nessary_exit">关闭</string>
    <string name="sort_install_nessary_down">下载所选</string>
    <string name="sort_install_installed">已安装</string>
    <string name="product_detail_top_title">软件详情</string>
    <string name="kulian_comments">%1$s个评级</string>
    <string name="has_update">有新版本</string>
    <string name="has_installed">已安装</string>
    <string name="duihuanquan_unit">%d券</string>
    <string name="coin_unit">%d金币</string>
    <string name="lable_description">简介</string>
    <string name="comment_lab">评论(%d)</string>
    <string name="warning_comment_later">已经开始下载，请稍候</string>
    <string name="person_account_title">个人中心</string>
    <string name="person_account_hint_name">Albert</string>
    <string name="person_account_sign_in_hint">每日签到</string>
    <string name="person_account_gold_coins_hint">2750</string>
    <string name="person_account_pay_gold_coins_hint">购买时间</string>
    <string name="person_account_sign_in_value">今天还没有签到哦^_^</string>
    <string name="person_account_already_sign_in">今天已签到</string>
    <string name="person_account_my_task_value">我的任务</string>
    <string name="person_account_my_task_hint_value">您有任务正在进行中哦</string>
    <string name="person_account_message_center_value">消息中心</string>
    <string name="person_account_normol_question_value">常见问题</string>
    <string name="person_account_feedback_value">意见反馈</string>
    <string name="person_account_logout_value">账号退出</string>
    <string name="account_logined">已登录，点击注销</string>
    <string name="account_logo_title">登录</string>
    <string name="account_messages_title">消息中心</string>
    <string name="account_pay_title">支付</string>
    <string name="account_feedback_title">反馈</string>
    <string name="account_about_title">关于</string>
    <string name="account_logo_desc">登陆后可开启以下功能与服务</string>
    <string name="account_clound_desc">从机锋市场推送APK到手机</string>
    <string name="account_payment_desc">便利地充值和购买付费内容</string>
    <string name="account_payment_balance">余额 : %1$s券 , 点击充值</string>
    <string name="account_payment_over">已完成交易</string>
    <string name="account_payed_count">%1$d笔</string>
    <string name="account_payed">购买</string>
    <string name="account_payment_title">充值</string>
    <string name="account_payed_history">购买历史记录</string>
    <string name="account_no_pay_log">没有购买记录</string>
    <string name="account_logout">注销</string>
    <string name="account_recharge">充值</string>
    <string name="account_start">开启</string>
    <string name="account_starting">开启中</string>
    <string name="account_close">关闭</string>
    <string name="sign_in_success">签到成功</string>
    <string name="sign_in_fail">签到失败</string>
    <string name="sure_to_regist">确定要注销吗?</string>
    <string name="sure_to_bind">云推送服务将使用更多流量，建议WIFI环境下开启</string>
    <string name="account_bind_error">云推送绑定失败，请稍后再试</string>
    <string name="account_remind">提醒</string>
    <string name="account_binding">云推送绑定中</string>
    <string name="account_bind_success">云推送绑定成功</string>
    <string name="person_account_pay_gold_coins_hint1">充值送金币</string>
    <string name="menu_account">个人中心</string>
    <string name="menu_setting">设置</string>
    <string name="menu_feedback">反馈</string>
    <string name="menu_bbs">社区</string>
    <string name="menu_exit">退出</string>
    <string name="menu_del_all">全部删除</string>
    <string name="download_status_downloading">下载中</string>
    <string name="download_status_downloaded">请安装</string>
    <string name="download_status_installing">安装中</string>
    <string name="download_status_installed">已安装</string>
    <string name="download_all_update">全部更新</string>
    <string name="install_fail_file_not_exist">安装文件已不存在</string>
    <string name="download_remain_bytes">剩余%1$s%2$s</string>
    <string name="download_start">下载马上开始</string>
    <string name="retry">重试</string>
    <string name="back">返回</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="attention">注意</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="info">消息</string>
    <string name="loading">加载中</string>
    <string name="download">下载</string>
    <string name="upgrade">升级</string>
    <string name="app_download">软件下载</string>
    <string name="get_push_msg">马上开始下载推送的应用</string>
    <string name="open_push">开启</string>
    <string name="hint_rating_count">%d人评分</string>
    <string name="rating">评分</string>
    <string name="open_apk_error_no_launch">没有应用程序可执行此操作</string>
    <string name="check_network">正在检测网络</string>
    <string name="network_status">检测到您正在使用%1$s网络</string>
    <string name="network_wifi">WIFI</string>
    <string name="network_valid">3G</string>
    <string name="network_cmwap">CMWAP</string>
    <string name="network_invalid">无网络</string>
    <string name="network_no_permission">无网络访问权限</string>
    <string name="no_valid_network">对不起，请检查网络是否可用？</string>
    <string name="network_retry">重试</string>
    <string name="network_setting">设置</string>
    <string name="init_data">正在获取最新内容</string>
    <string name="lable_not_found">对不起，没有找到这款应用。</string>
    <string name="warning_password_is_empty">密码不能为空</string>
    <string name="hint_purchase">此软件需要%d个机锋券，请输入密码确认收费。</string>
    <string name="hint_purchase_success">购买成功</string>
    <string name="hint_purchase_failed">购买失败</string>
    <string name="hint_purchase_password_error">支付密码错误</string>
    <string name="warning_no_balance">您的帐号中没有足够的机锋券，点击\"是\"进入充值中心，或者\"否\"取消</string>
    <string name="useragent_app_name">aMarket2.0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="alert_dialog_error">连接失败，请稍候重试</string>
    <string name="no_data">暂时没有数据，请检查网络或稍后再试</string>
    <string name="permissions">所需权限：</string>
    <string name="no_permissions">"不需要任何权限"</string>
    <string name="permissions_desc">此应用程序需要以下权限，请确认后再下载</string>
    <string name="feedback_title">意见反馈 </string>
    <string name="feedback_submit">提交</string>
    <string name="feedback_hint_message">请输入您的问题、意见或建议</string>
    <string name="app_item_action_view">查看</string>
    <string name="person_account_other_account_memo_hint">输入备注信息</string>
    <string name="person_account_other_account_prompt_hint">请认真核对好充值手机号，一旦充错，恕不退款。</string>
    <string name="person_account_other_account_buy_prompt_hint">上网时间将在充值后即刻生效。若当前的上网时间尚未到期，我们将为您自动累加。</string>
    <string name="person_account_other_account_remark_prompt_hint">注：金币将发放至付款方账号内</string>
    <string name="payment_choice_detail">支付明细：</string>
    <string name="payment_pay_time_text">充值时间：</string>
    <string name="payment_pay_money_text">充值金额：</string>
    <string name="payment_pay_acount_text">充值账号：</string>
    <string name="payment_pay_remark_text">备&#160;&#160;&#160;&#160;&#160;&#160;注：</string>
    <string name="payment_pay_time_value"> </string>
    <string name="payment_pay_money_value"> </string>
    <string name="payment_pay_acount_value"> </string>
    <string name="payment_pay_remark_value"></string>
    <string name="payment_choice_describ">请选择您的支付方式：</string>
    <string name="payment_choice_wetchat_pay">微信支付：</string>
    <string name="payment_choice_alipay_pay">支付宝支付：</string>
    <string name="payment_choice_pay_button">确认支付</string>
</resources>