<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_bar" />

    <ScrollView
        android:id="@+id/content_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="vertical" >
			<TextView
                    android:id="@+id/payment_choice_detail_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_marginTop="20dp"
                    android:gravity="left"
                    android:text="@string/payment_choice_detail"
                    android:textColor="#333333"
                    android:textSize="14sp" />
            <LinearLayout
                android:id="@+id/other_account_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dp"
                android:padding="5dip"
                android:background="@drawable/edit_text_bg"
                android:orientation="vertical"
                android:visibility="visible" >
                <RelativeLayout 
			        android:id="@+id/payment_pay_time_layout"
			        android:layout_width="fill_parent"
		    	    android:layout_height="20dip"
			        >		        
						 <TextView
						    android:id="@+id/payment_pay_time_text"
						    android:layout_width="wrap_content"
						    android:layout_height="fill_parent"
						    android:text="@string/payment_pay_time_text"
						    android:layout_marginLeft="15dip"
						    android:layout_alignParentLeft="true"
						    android:gravity="center_vertical"
						    android:layout_centerInParent="true"
						    android:textColor="#a5a5a5"
            				android:textSize="12sp"
						 	/>
						 <TextView
						    android:id="@+id/payment_pay_time_value"
						    android:layout_width="wrap_content"
						    android:layout_height="fill_parent"
						    android:text="@string/payment_pay_time_value"
						    android:gravity="center|left"
						    android:layout_marginRight="5dip"
						    android:layout_toRightOf="@+id/payment_pay_time_text"
						    android:layout_centerInParent="true"
						    android:textColor="#595959"
						    android:textSize="12sp"
						    android:singleLine="true"
						 	/>	
		    	</RelativeLayout>
		    	<RelativeLayout 
			        android:id="@+id/payment_pay_money_layout"
			        android:layout_width="fill_parent"
		    	    android:layout_height="20dip"
		    	    android:layout_marginTop="5dip"
			        >		        
						 <TextView
						    android:id="@+id/payment_pay_money_text"
						    android:layout_width="wrap_content"
						    android:layout_height="fill_parent"
						    android:text="@string/payment_pay_money_text"
						    android:layout_marginLeft="15dip"
						    android:layout_alignParentLeft="true"
						    android:gravity="center_vertical"
						    android:layout_centerInParent="true"
						    android:textColor="#a5a5a5"
            				android:textSize="12sp"
						 	/>
						 <TextView
						    android:id="@+id/payment_pay_money_value"
						    android:layout_width="wrap_content"
						    android:layout_height="fill_parent"
						    android:text="@string/payment_pay_money_value"
						    android:gravity="center|left"
						    android:layout_marginRight="5dip"
						    android:layout_toRightOf="@+id/payment_pay_money_text"
						    android:layout_centerInParent="true"
						    android:textColor="#595959"
						    android:textSize="12sp"
						    android:singleLine="true"
						 	/>		
		    	</RelativeLayout>
		    	<RelativeLayout 
			        android:id="@+id/payment_pay_acount_layout"
			        android:layout_width="fill_parent"
		    	    android:layout_height="20dip"
		    	    android:layout_marginTop="5dip"
			        >		        
						 <TextView
						    android:id="@+id/payment_pay_acount_text"
						    android:layout_width="wrap_content"
						    android:layout_height="fill_parent"
						    android:text="@string/payment_pay_acount_text"
						    android:layout_marginLeft="15dip"
						    android:layout_alignParentLeft="true"
						    android:gravity="center_vertical"
						    android:layout_centerInParent="true"
						    android:textColor="#a5a5a5"
            				android:textSize="12sp"
						 	/>
						 <TextView
						    android:id="@+id/payment_pay_acount_value"
						    android:layout_width="wrap_content"
						    android:layout_height="fill_parent"
						    android:text="@string/payment_pay_acount_value"
						    android:gravity="center|left"
						    android:layout_marginRight="5dip"
						    android:layout_toRightOf="@+id/payment_pay_acount_text"
						    android:layout_centerInParent="true"
						    android:textColor="#595959"
						    android:textSize="12sp"
						    android:singleLine="true"
						 	/>		
		    	</RelativeLayout>   
		    	<RelativeLayout 
			        android:id="@+id/payment_pay_remark_layout"
			        android:layout_width="fill_parent"
		    	    android:layout_height="20dip"
		    	    android:layout_marginTop="5dip"
			        >		        
						 <TextView
						    android:id="@+id/payment_pay_remark_text"
						    android:layout_width="wrap_content"
						    android:layout_height="fill_parent"
						    android:text="@string/payment_pay_remark_text"
						    android:layout_marginLeft="15dip"
						    android:layout_alignParentLeft="true"
						    android:gravity="center_vertical"
						    android:layout_centerInParent="true"
						    android:textColor="#a5a5a5"
            				android:textSize="12sp"
						 	/>
						 <TextView
						    android:id="@+id/payment_pay_remark_value"
						    android:layout_width="wrap_content"
						    android:layout_height="fill_parent"
						    android:text="@string/payment_pay_remark_value"
						    android:gravity="center|left"
						    android:layout_marginRight="5dip"
						    android:layout_toRightOf="@+id/payment_pay_remark_text"
						    android:layout_centerInParent="true"
						    android:textColor="#595959"
						    android:textSize="12sp"
						    android:singleLine="true"
						 	/>		
		    	</RelativeLayout>           
            </LinearLayout>
           

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#E8E8E8" />
            
            <TextView
                    android:id="@+id/payment_choice_describ_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:text="@string/payment_choice_describ"
                    android:textColor="#333333"
                    android:textSize="14sp" />
            <LinearLayout
                android:id="@+id/payment_choice_choice_pay_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:orientation="vertical"
                android:visibility="visible" >
		    	<RelativeLayout 		    	    
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="48dip"
		    	    android:background="@null"
		    	    android:orientation="horizontal"
		    	    >
						 <ImageView
				   	        android:contentDescription="@null"
							android:id="@+id/payment_choice_wetchat_pay_img"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentLeft="true"
							android:layout_centerInParent="true"
							android:layout_marginLeft="15dip"
							android:background="@drawable/wechaticon"
							 />

			    	    <TextView 
			    	        android:layout_width="wrap_content"
			    	        android:layout_height="fill_parent"
			    	        android:gravity="left|center"
			    	        android:text="@string/payment_choice_wetchat_pay"
			    	        android:textSize="14sp"
			    	        android:layout_marginLeft="5dip"
			    	        android:textColor="#595959"
			    	        android:layout_toRightOf="@+id/payment_choice_wetchat_pay_img"
			    	        /> 
		    	        <CheckBox 
			    	        android:layout_width="15dip"
			    	        android:layout_height="15dip"
			    	        android:id="@+id/payment_choice_wetchat_pay_checkbox"
			    	        android:button="@null"
			    	        android:background="@drawable/pay_yue_checkbox_bg"
			    	        android:layout_alignParentRight="true"
			    	        android:layout_centerInParent="true"
			    	        android:layout_marginRight="15dip"
			    	        android:checked="false"
			    	        />
		    	        
		    	</RelativeLayout>
		    	<View
	                android:layout_width="fill_parent"
	                android:layout_height="1dp"
	                android:background="#E8E8E8" />
		    	<RelativeLayout 		    	    
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="48dip"
		    	    android:background="@null"
		    	    android:orientation="horizontal"
		    	    >
						 <ImageView
				   	        android:contentDescription="@null"
							android:id="@+id/payment_choice_alipay_pay_img"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentLeft="true"
							android:layout_centerInParent="true"
							android:layout_marginLeft="15dip"
							android:background="@drawable/alipayicon"
							 />

			    	    <TextView 
			    	        android:layout_width="wrap_content"
			    	        android:layout_height="fill_parent"
			    	        android:gravity="left|center"
			    	        android:text="@string/payment_choice_alipay_pay"
			    	        android:textSize="14sp"
			    	        android:layout_marginLeft="5dip"
			    	        android:textColor="#595959"
			    	        android:layout_toRightOf="@+id/payment_choice_alipay_pay_img"
			    	        /> 
		    	        <CheckBox 
			    	        android:layout_width="15dip"
			    	        android:layout_height="15dip"
			    	        android:id="@+id/payment_choice_alipay_pay_checkbox"
			    	        android:button="@null"
			    	        android:background="@drawable/pay_yue_checkbox_bg"
			    	        android:layout_alignParentRight="true"
			    	        android:layout_centerInParent="true"
			    	        android:layout_marginRight="15dip"
			    	        android:checked="false"
			    	        />
		    	        
		    	</RelativeLayout>
                   
            </LinearLayout>

            <LinearLayout
                android:id="@+id/other_account_layout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:orientation="vertical"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/et_memo"
                    style="@style/edit_text_style"
                    android:layout_width="fill_parent"
                    android:layout_margin="8dip"
                    android:drawablePadding="10dip"
                    android:drawableStart="@drawable/markicon"
                    android:hint="@string/person_account_other_account_memo_hint"
                    android:maxLength="100"
                    android:paddingLeft="10dip" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#E8E8E8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginLeft="30dip"
                    android:layout_marginRight="30dip"
                    android:gravity="center|left"
                    android:text="@string/person_account_other_account_prompt_hint"
                    android:textColor="#a5a5a5"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dip"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:gravity="center|left"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/person_account_other_account_buy_prompt_hint"
                android:textColor="#a5a5a5"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/person_account_other_account_remark_prompt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:layout_marginRight="30dip"
                android:layout_marginTop="5dip"
                android:gravity="center|left"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/person_account_other_account_remark_prompt_hint"
                android:textColor="#ff4c00"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/payment_choice_pay_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/confirm_btn_bg_selector"
                android:gravity="center"
                android:text="@string/payment_choice_pay_button"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:drawableTop="@drawable/btn_retry"
        android:text="@string/no_data"
        android:textColor="#595959"
        android:visibility="gone" />

</LinearLayout>