<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color" >

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/task_header_bg" >

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="30dip"
            android:layout_height="20dip"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="15dip"
            android:background="@null"
            android:gravity="left"
            android:contentDescription="@null"
            android:src="@drawable/left_arrow" />

        <!-- Title -->

        <TextView
            android:id="@+id/top_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dip"
            android:gravity="center_vertical"
            android:shadowColor="@color/black"
            android:shadowDy="-2.0"
            android:shadowRadius="0.1"
            android:singleLine="true"
            android:text="@string/feedback_title"
            android:textAppearance="@style/topbar_title" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_comment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="-20dp"
        android:gravity="top|left"
        android:hint="@string/feedback_hint_message"
        android:maxLines="6"
        android:minLines="6" />

    <Button
        android:id="@+id/ib_send"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/et_comment"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#2C78D4"
        android:textSize="14sp"
        android:text="@string/feedback_submit"
        android:textColor="#FFFFFF" />

</RelativeLayout>